Working on the Daily Bible Chat

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# Vercel setup scripts temp files
+scripts/vercel/temp/
+.env.production
