--- a/package.json
+++ b/package.json
@@ -3,32 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@langchain/core": "^0.3.24",
     "@llama-node/core": "^0.1.6",
     "@llama-node/llama-cpp": "^0.1.6",
-    "@supabase/supabase-js": "^2.47.8",
-    "@types/tailwindcss": "^3.1.0",
+    "@nextui-org/react": "2.1.13",
+    "@prisma/client": "^6.1.0",
+    "@react-aria/focus": "^3.19.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/marked": "^6.0.0",
+    "@vercel/next": "^4.4.0",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "1.2.1",
+    "date-fns": "^4.1.0",
     "langchain": "^0.3.7",
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "lucide-react": "^0.469.0",
+    "marked": "^15.0.4",
+    "next": "^14.1.0",
+    "next-themes": "^0.4.4",
+    "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
+    "resend": "^4.0.1",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "1.14.0",
     "twilio": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20.17.10",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.16",
+    "postcss": "^8.4.49",
+    "prisma": "^6.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
 }
