--- a/package.json
+++ b/package.json
@@ -13,29 +13,32 @@
     "@langchain/core": "^0.3.24",
     "@llama-node/core": "^0.1.6",
     "@llama-node/llama-cpp": "^0.1.6",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "2.1.13",
     "@prisma/client": "^6.1.0",
     "@react-aria/focus": "^3.19.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
-    "@types/bcryptjs": "^2.4.6",
     "@types/marked": "^6.0.0",
     "@vercel/next": "^4.4.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "1.2.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "langchain": "^0.3.7",
     "lucide-react": "^0.469.0",
     "marked": "^15.0.4",
     "next": "^14.1.0",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "resend": "^4.0.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "1.14.0",
     "twilio": "^5.4.0"
@@ -43,6 +46,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.17.10",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
