--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "2.1.13",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-aria/focus": "^3.19.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
@@ -40,9 +42,10 @@
     "@vercel/next": "^4.4.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
-    "clsx": "1.2.1",
+    "clsx": "^1.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.1",
     "express": "^4.21.2",
     "langchain": "^0.3.7",
     "lucide-react": "^0.469.0",
@@ -54,13 +57,14 @@
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
-    "tailwind-merge": "1.14.0",
+    "tailwind-merge": "^1.14.0",
     "twilio": "^5.4.0"
   },
   "devDependencies": {
