--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nextui-org/react": "2.1.13",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-aria/focus": "^3.19.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -40,6 +41,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@types/express": "^5.0.0",
     "@vercel/next": "^4.4.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
@@ -70,6 +72,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.17.10",
