--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
